Changelog
=========

2.0-rc1 (2011-02-28)
~~~~~~~~~~~~~~~~~~~~

- Update to Chameleon 2.0.

  This release includes many changes and is a complete rewrite of the
  1.x series.

  Platform:

  * Python 2.5+ now required.

  Notable changes:

  * Expression interpolation is always enabled.

  * Whitespace output is different, now closely aligned to the
    template input.

  * New language constructs:

    1) tal:on-error
    2) tal:switch
    3) tal:case

  Incompatibilities:

  * The expression translation interface has been replaced with an
    expression engine. This means that all expressions must be
    rewritten.

- The exists expression evaluator should ignore KeyError exceptions
  as well.

- Special-case handling of Zope2's Missing.MV as used by
  Products.ZCatalog for LP#649343.
  [rossp]

1.2.1 (2010/05/13)
------------------

- Bind template to the template object in the general case.

1.2 (2010/05/12)
------------------

- Fixed compatibility issue with recent change in Chameleon.

- Fixed regression introduced with ``args`` being passed
  in. Incidentally, the name ``args`` was used as the star argument
  name.

- Look at language set on request before invoking the zope.i18n
  negotiator. This makes i18n work again on Zope2.

1.1.1 (2010/04/06)
------------------

- Fixed issue where arguments were not passed on to template as
  ``args``.

1.1.0 (2010/01/09)
------------------

- Update to combined Chameleon distribution.

1.0.1 (2009/07/06)
------------------

- Bind translation context (request) to translation method. Although
  not required in newer versions of the translation machinery, some
  versions will ask for a translation context in order to negotiate
  language even when a language is explicitly passed in.

- Declare zope security settings for classes when zope.security is present
  as the "class" ZCML directive was moved there.

1.0.0 (2009/07/06)
------------------

- First point release.

1.0b17 (2009/06/14)
-------------------
