@@ -1,6 +1,13 @@
 Changelog
 =========
 
+In next release...
+
+- Fixed an issue with ``"exists:"`` expression where a callable would
+  be attempted called. It is meanwhile implied with this expression
+  types that it should use the ``"nocall:"`` pragma.
+
+
 2.0-rc1 (2011-02-28)
 ~~~~~~~~~~~~~~~~~~~~
 
